--- a/_posts/2019-04-02-jekyll.md
+++ b/_posts/2019-04-02-jekyll.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "通过 Jekyll 与 Github 生成个人站点"
-subtitle: "Create a personal website through Jekyll and Github"
+title: "Create a personal website through Jekyll and Github"
+subtitle:  "通过 Jekyll 与 Github 生成个人站点"
 date:   2019-04-02 14:47:00 +0900
 background: '/img/posts/jekyll.png'
 ---
@@ -30,4 +30,4 @@ background: '/img/posts/jekyll.png'
 
 安装好 Jekyll 后，在你的工作目录下执行 `jekyll new <Your website folder name>`，即可生成一个测试站点。
 
-在你的 Github 上建立一个名为 <Your username>.github.io 的 repository，把你的站点 `git push` 到刚建立的仓库即可。几分钟后打开 <Your username>.github.io 试着看下吧。
+在你的 Github 上建立一个名为 `<Your username>.github.io` 的仓库（repository），把你的站点 `git push` 到刚建立的仓库即可。打开 `<Your username>.github.io` 试着看下吧。
