--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -1,18 +1,44 @@
 ---
 layout: post
-title: "The zsh"
-subtitle:  "zsh"
+title: "Let's use the zsh!"
+subtitle:  "让我们一起使用zsh吧"
 date:   2019-04-18 12:27:00 +0900
-background: '/img/posts/language.png'
+background: '/img/posts/zsh.png'
 ---
 
-cat /etc/shells
+# 安装zsh
 
+MacOS操作系统下安装zsh时通过下面的命令：
+
+```sh
+brew install zsh
+```
+
+Ubuntu或Linuxmint等系统可以使用apt包管理器。
+
+# 查看系统当前安装了哪些Shell：
+
+```sh
+cat /etc/shells
+```
+
+# 切换到zsh
+
+```sh
 chsh -s /usr/local/bin/zsh%
+```
+
+Shell脚本解释出错时可以查看一下使用了哪里的`sh`
 
 ls -l `which sh`
 
+从bash切换过来的话对于集合从1开始这样的规则可能并不喜欢，那么用下面的方式来切换回从0开始：
+
+```sh
 ## Fix array index for ZSH
 if [ "$ZSH_NAME" = "zsh" ];then
-  setopt localoptions ksharrays
+	setopt localoptions ksharrays
 fi
+```
+
+以上。
