--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -7,6 +7,7 @@ background: '/img/posts/zsh.png'
 ---
 
 # 安装zsh
+{:.section-heading}
 
 MacOS操作系统下安装zsh时通过下面的命令：
 
@@ -17,12 +18,14 @@ brew install zsh
 Ubuntu或Linuxmint等系统可以使用apt包管理器。
 
 # 查看系统当前安装了哪些Shell：
+{:.section-heading}
 
 ```sh
 cat /etc/shells
 ```
 
 # 切换到zsh
+{:.section-heading}
 
 ```sh
 chsh -s /usr/local/bin/zsh%
