--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -6,8 +6,12 @@ date:   2019-04-18 12:27:00 +0900
 background: '/img/posts/zsh.png'
 ---
 
-# 安装zsh
+# 开启zsh之路的过程
 {:.section-heading}
+
+这篇文章简单说明如何从任意的shell切换到zsh。
+
+* 安装zsh
 
 MacOS操作系统下安装zsh时通过下面的命令：
 
@@ -17,15 +21,13 @@ brew install zsh
 
 Ubuntu或Linuxmint等系统可以使用apt包管理器。
 
-# 查看系统当前安装了哪些Shell：
-{:.section-heading}
+* 查看系统当前安装了哪些Shell：
 
 ```sh
 cat /etc/shells
 ```
 
-# 切换到zsh
-{:.section-heading}
+* 切换到zsh
 
 ```sh
 chsh -s /usr/local/bin/zsh%
@@ -33,12 +35,14 @@ chsh -s /usr/local/bin/zsh%
 
 Shell脚本解释出错时可以查看一下使用了哪里的`sh`
 
+```sh
 ls -l `which sh`
+```
 
 从bash切换过来的话对于集合从1开始这样的规则可能并不喜欢，那么用下面的方式来切换回从0开始：
 
+>Fix array index for ZSH:
 ```sh
-## Fix array index for ZSH
 if [ "$ZSH_NAME" = "zsh" ];then
 	setopt localoptions ksharrays
 fi
