--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -6,22 +6,22 @@ date:   2019-04-18 12:27:00 +0900
 background: '/img/posts/zsh.png'
 ---
 
-# 开启zsh之路的过程
+# 开启`zsh`之路的过程
 {:.section-heading}
 
-这篇文章简单说明如何从任意的shell切换到zsh。
+这篇文章简单说明如何从任意的`shell`切换到`zsh`。
 
 * 安装zsh
 
-MacOS操作系统下安装zsh时通过下面的命令：
+MacOS操作系统下安装`zsh`时通过下面的命令：
 
 ```sh
 brew install zsh
 ```
 
-Ubuntu或Linuxmint等系统可以使用apt包管理器。
+Ubuntu或Linuxmint等系统可以使用`apt`包管理器。
 
-* 查看系统当前安装了哪些Shell：
+* 查看系统当前安装了哪些`shell`：
 
 ```sh
 cat /etc/shells
@@ -33,13 +33,13 @@ cat /etc/shells
 chsh -s /usr/local/bin/zsh%
 ```
 
-Shell脚本解释出错时可以查看一下使用了哪里的`sh`
+`shell`脚本解释出错时可以查看一下`sh`的情况：
 
 ```sh
 ls -l `which sh`
 ```
 
-从bash切换过来的话对于集合从1开始这样的规则可能并不喜欢，那么用下面的方式来切换回从0开始：
+从`bash`切换过来的话对于集合从`1`开始这样的规则可能并不喜欢，那么用下面的方式来切换回从`0`开始：
 
 >Fix array index for ZSH:
 ```sh
@@ -47,5 +47,3 @@ if [ "$ZSH_NAME" = "zsh" ];then
 	setopt localoptions ksharrays
 fi
 ```
-
-以上。
