--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -1,45 +1,45 @@
 ---
 layout: post
 title: "Let's use the zsh!"
-subtitle:  "让我们一起使用zsh吧"
+subtitle:  "让我们一起使用 zsh 吧"
 date:   2019-04-18 12:27:00 +0900
 background: '/img/posts/zsh.png'
 ---
 
-# 开启`zsh`之路的过程
+# 开启 zsh 之路的过程
 {:.section-heading}
 
-这篇文章简单说明如何从任意的`shell`切换到`zsh`。
+这篇文章简单说明如何从任意的 shell 切换到 zsh。
 
-* 安装zsh
+* 安装 zsh
 
-MacOS操作系统下安装`zsh`时通过下面的命令：
-
-```sh
-brew install zsh
-```
-
-Ubuntu或Linuxmint等系统可以使用`apt`包管理器。
-
-* 查看系统当前安装了哪些`shell`：
+MacOS 操作系统下安装 zsh 时通过下面的命令：
 
 ```sh
-cat /etc/shells
+	brew install zsh
 ```
 
-* 切换到zsh
+Ubuntu 或 Linuxmint 等系统可以使用 apt 包管理器。
+
+* 查看系统当前安装了哪些 shell：
 
 ```sh
-chsh -s /usr/local/bin/zsh%
+	cat /etc/shells
 ```
 
-`shell`脚本解释出错时可以查看一下`sh`的情况：
+* 切换到 zsh
+
+```sh
+	chsh -s /usr/local/bin/zsh%
+```
+
+shell 脚本解释出错时可以查看一下 sh 的情况：
 
 ```sh
 ls -l `which sh`
 ```
 
-从`bash`切换过来的话对于集合从`1`开始这样的规则可能并不喜欢，那么用下面的方式来切换回从`0`开始：
+从 bash 切换到 zsh 会发现集合的第一个元素是从 1 开始的，如果需要从 0 开始，通过下面的方式即可：
 
 >Fix array index for ZSH:
 ```sh
