--- a/_posts/2019-04-17-language.md
+++ b/_posts/2019-04-17-language.md
@@ -1,9 +1,14 @@
 ---
 layout: post
 title: "The different languages"
-subtitle:  "各種の言語"
+subtitle:  "各种各样的语言"
 date:   2019-04-17 12:27:00 +0900
 background: '/img/posts/language.png'
 ---
 
-工事中
+## 自然语言
+{:.section-heading}
+
+## 编程语言
+{:.section-heading}
+
