--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -6,7 +6,7 @@ date:   2019-04-18 12:27:00 +0900
 background: '/img/posts/zsh.png'
 ---
 
-# 开启 zsh 之路的过程
+## 开启 zsh 旅程
 {:.section-heading}
 
 这篇文章简单说明如何从任意的 shell 切换到 zsh。
