--- a/_posts/2019-05-03-fish.md
+++ b/_posts/2019-05-03-fish.md
@@ -8,11 +8,58 @@ background: '/img/posts/fish.png'
 
 今天基本把所有环境转移到了 fish，算是 shell 的整理工作告一段路，对整个过程稍作总结。
 
-## fish 的安装
+## fish 的安装与默认 shell 的切换
 {:.section-heading}
 
-`brew install fish`
+* MacOS 环境：
 
-`apt install fish`
+```
+brew install fish
+```
+
+* Ubuntu / Linux Mint 环境：
+
+```
+apt install fish
+```
+
+* OpenSUSE 环境：
+
+```
+sudo zypper install fish
+```
+（若是运行在 Windows 下的 OpenSUSE 环境，
+默认应该需要 root 权限因此加 sudo）
+
+安装好后通过以下语句查看当前系统下安装的 shell：
+
+```
+cat /etc/shells
+```
+
+例如 fish 如果为 `/usr/bin/fish`，
+那么执行下面的语句切换 fish 到默认的 shell：
+
+```
+chsh -s /usr/bin/fish
+```
+（如果权限不足在前面补充 sudo）
+
+现在重新打开一个终端会话会发现默认 shell 已经切换到 fish 了。
+如果打开 fish shell 马上报很多关于 hostname 的错，
+需要使用当前 Linux 发行版的包管理器安装 hostname，
+例如在 OpenSUSE 环境下出现类似错误时运行：
+
+```
+sudo zypper install hostname
+```
+
+即环境下默认缺少 hostname 时，安装即可。
+
+## fish 的配置
+{:.section-heading}
+
+我写好的配置上传在了 Github，有需要的可以使用：
+[点击查看我的配置](https://github.com/xinii/xinconfig/tree/master/profile/fish)
 
 （未完待续）
