--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -6,31 +6,25 @@ date:   2019-04-18 12:27:00 +0900
 background: '/img/posts/zsh.png'
 ---
 
-## 开启 zsh 旅程
+## 安装 zsh
 {:.section-heading}
 
 这篇文章简单说明如何从任意的 shell 切换到 zsh。
 
-* 安装 zsh
-
-MacOS 操作系统下安装 zsh 时通过下面的命令：
-
-```sh
-	brew install zsh
+* 安装 zsh 时通过下面的命令
+```
+brew install zsh (MacOS)
+apt install zsh (Ubuntu / Linux Mint)
 ```
 
-Ubuntu 或 Linuxmint 等系统可以使用 apt 包管理器。
-
 * 查看系统当前安装了哪些 shell：
-
-```sh
-	cat /etc/shells
+```
+cat /etc/shells
 ```
 
 * 切换到 zsh
-
-```sh
-	chsh -s /usr/local/bin/zsh%
+```
+chsh -s /usr/local/bin/zsh
 ```
 
 shell 脚本解释出错时可以查看一下 sh 的情况：
@@ -39,9 +33,10 @@ shell 脚本解释出错时可以查看一下 sh 的情况：
 ls -l `which sh`
 ```
 
-从 bash 切换到 zsh 会发现集合的第一个元素是从 1 开始的，如果需要从 0 开始，通过下面的方式即可：
+从 bash 切换到 zsh 会发现集合的第一个元素是从 1 开始的，
+如果需要从 0 开始，通过下面的方式即可：
 
->Fix array index for ZSH:
+* Fix array index for ZSH:
 ```sh
 if [ "$ZSH_NAME" = "zsh" ];then
 	setopt localoptions ksharrays
