--- a/_posts/2019-04-18-zsh.md
+++ b/_posts/2019-04-18-zsh.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Let's use the zsh!"
-subtitle:  "让我们一起使用 zsh 吧"
+title: "How to install and use zsh shell!"
+subtitle:  "如何安装使用 zsh shell"
 date:   2019-04-18 12:27:00 +0900
 background: '/img/posts/zsh.png'
 ---
@@ -27,13 +27,19 @@ cat /etc/shells
 chsh -s /usr/local/bin/zsh
 ```
 
+* 配置文件读取错误如何差错
+
 shell 脚本解释出错时可以查看一下 sh 的情况：
+（例如是否 sh 指定到了 dash 等）
 
 ```sh
 ls -l `which sh`
 ```
 
-从 bash 切换到 zsh 会发现集合的第一个元素是从 1 开始的，
+* 脚本解释器在语法上的不同点
+
+从传统的 bash 等 shell 切换到 zsh 时
+会发现集合的第一个元素是从 1 开始的，
 如果需要从 0 开始，通过下面的方式即可：
 
 * Fix array index for ZSH:
@@ -42,3 +48,14 @@ if [ "$ZSH_NAME" = "zsh" ];then
 	setopt localoptions ksharrays
 fi
 ```
+
+## 使用 zsh
+{:.section-heading}
+
+需在你的用户目录下写一个 `.zshrc` 的配置文件，
+类似 bash 的 `.bashrc` 配置文件的作用。
+
+我写好的配置上传在了 Github，有需要的可以使用：
+[点击查看我的配置](https://github.com/xinii/xinconfig/blob/master/profile/core/zsh.sh)
+
+（未完待续）
