--- a/_posts/2019-05-03-fish.md
+++ b/_posts/2019-05-03-fish.md
@@ -62,4 +62,25 @@ sudo zypper install hostname
 我写好的配置上传在了 Github，有需要的可以使用：
 [点击查看我的配置](https://github.com/xinii/xinconfig/tree/master/profile/fish)
 
-（未完待续）
+## 在 fish 下使用 python 时的常见问题
+{:.section-heading}
+
+目前我遇到的比较需要注意的问题主要有以下两点：
+
+1. 关于 tmux
+
+tmux 在后台存在 session 时，即使更新 PYTHONPATH 环境变量也不生效，
+此时需要关闭 tmux 所有进程，更改才会生效。
+
+（该问题除 fish 以外应该也会遇到，需要注意）
+
+2. 关于 PYTHONPATH
+
+fish 定义环境变量的方式为 `set <变量名> <变量值1> <变量值2>` 的方式，
+这种方式有很大的优越性并且十分方便，
+但是对于 PYTHONPATH，最好使用 `set PYTHONPATH <变量值1>:<变量值2>` 的方式，
+经测试，我在 MacOS 下两种方式均正常使用，
+而在 Jetson Nano 搭载的 Ubuntu 下只有第二种方式适用。
+
+具体原因还未明确，有可能是操作系统不同的原因，
+也有可能是 python 版本不同的原因（版本号相同，但处理器架构不同，故编译方式存在差异）。
