--- a/_posts/2019-05-03-fish.md
+++ b/_posts/2019-05-03-fish.md
@@ -67,14 +67,14 @@ sudo zypper install hostname
 
 目前我遇到的比较需要注意的问题主要有以下两点：
 
-1. 关于 tmux
+- 关于 tmux
 
 tmux 在后台存在 session 时，即使更新 PYTHONPATH 环境变量也不生效，
 此时需要关闭 tmux 所有进程，更改才会生效。
 
 （该问题除 fish 以外应该也会遇到，需要注意）
 
-2. 关于 PYTHONPATH
+- 关于 PYTHONPATH
 
 fish 定义环境变量的方式为 `set <变量名> <变量值1> <变量值2>` 的方式，
 这种方式有很大的优越性并且十分方便，
